tbd:
  - Add Server power operations (on, off, reboot, reset)
  - Allow host memory overcommit (best-effort placement of VMs)
2.2.0:
  - Support setting organization on Windows VMs.
  - Support Windows custom sysprep.
  - Make amount of vSphere calls independent of amount of entities on vSphere.
2.1.0:
  - Support restrictions on deployment location by setting one or more allowed hosts, clusters, or datastores.
  - Better logic for selecting deployment locations to ensure selected hosts have all required resources.
  - Improve health checks on hypervisors and datastores when determining availability for VM deployment.
  - Remove defaults from plugin.yaml connection config to avoid them always overriding manager connection config.
2.0.1:
  - Make naming of servers automatically replace underscores with hyphens, allowing nodecellar to work.
  - Don't fail when no public or management networks are set.
  - More consistent setting of runtime properties when public or management networks are not set.
  - Do not fail when no interfaces are attached.
  - Fail fast when invalid properties are provided for servers.
  - Provide more useful feedback if network names or switch_distributed settings are incorrect.
  - Don't return from network creation before network is created.
2.0:
  - Add extra runtime attribute data for attached networks to include MAC address for servers.
  - Add extra runtime attribute for SCSI ID on storage nodes.
  - Remove undocumented and redundant port resource.
  - Make module naming more explicit.
  - Improve error output when trying to create network.
  - Completely remove transform_resource.
  - Make logging meet draft guidelines.
  - More tests.
  - Improvements to network naming.
  - Factor out constants.