@@ -3,4 +3,5 @@ mock>=1.0
 nose-testconfig>=0.9
 nose>=1.3
 nose-cov>=1.3
+pyfakefs
 tox
