@@ -16,10 +16,10 @@
 from __future__ import division
 
 # Stdlib imports
+import atexit
 import os
 import re
 import time
-import atexit
 import urllib
 from copy import copy
 from functools import wraps
@@ -36,6 +36,7 @@ from cloudify import exceptions as cfy_exc
 
 # This package imports
 from vsphere_plugin_common.constants import (
+    DEFAULT_CONFIG_PATH,
     NETWORKS,
     NETWORK_ID,
     TASK_CHECK_SLEEP,
@@ -67,32 +68,51 @@ def remove_runtime_properties(properties, context):
 class Config(object):
 
     # Required during vsphere manager bootstrap
-    CONNECTION_CONFIG_PATH_DEFAULT = '~/connection_config.yaml'
+    CONNECTION_CONFIG_PATH_DEFAULT = DEFAULT_CONFIG_PATH
+
+    _path_options = [
+        {'source': '/root/connection_config.yaml', 'warn': True},
+        {'source': '~/connection_config.yaml', 'warn': True},
+        {'source': DEFAULT_CONFIG_PATH, 'warn': False},
+        {'env': True, 'source': 'CONNECTION_CONFIG_PATH', 'warn': True},
+        {'env': True, 'source': 'CFY_VSPHERE_CONFIG_PATH', 'warn': False},
+    ]
+
+    def _find_config_file(self):
+        selected = DEFAULT_CONFIG_PATH
+        warnings = []
+
+        for path in self._path_options:
+            source = path['source']
+            if path.get('env'):
+                source = os.getenv(source)
+            if source:
+                source = os.path.expanduser(source)
+                if os.path.isfile(source):
+                    selected = source
+                    if path['warn']:
+                        warnings.append(path['source'])
+
+        if warnings:
+            ctx.logger.warn(
+                "Deprecated configuration options were found: {}".format(
+                    "; ".join(warnings)),
+            )
+
+        return selected
 
     def get(self):
         cfg = {}
-        which = self.__class__.which
-        env_name = which.upper() + '_CONFIG_PATH'
-        default_location_tpl = '~/' + which + '_config.yaml'
-        default_location = os.path.expanduser(default_location_tpl)
-        config_path = os.getenv(env_name, default_location)
+        config_path = self._find_config_file()
         try:
             with open(config_path) as f:
                 cfg = yaml.load(f.read())
         except IOError:
-            ctx.logger.warn("Unable to read %s "
+            ctx.logger.warn("Unable to read "
                             "configuration file %s." %
-                            (which, config_path))
+                            (config_path))
 
         return cfg
-
-
-class ConnectionConfig(Config):
-    which = 'connection'
-
-
-class TestsConfig(Config):
-    which = 'unit_tests'
 
 
 class _ContainerView(object):
@@ -115,18 +135,16 @@ class _ContainerView(object):
 
 class VsphereClient(object):
 
-    config = ConnectionConfig
-
     def __init__(self):
         self._cache = {}
 
     def get(self, config=None, *args, **kw):
-        static_config = self.__class__.config().get()
-        cfg = {}
-        cfg.update(static_config)
+        static_config = Config().get()
+        self.cfg = {}
+        self.cfg.update(static_config)
         if config:
-            cfg.update(config)
-        ret = self.connect(cfg)
+            self.cfg.update(config)
+        ret = self.connect(self.cfg)
         ret.format = 'yaml'
         return ret
 
@@ -2604,31 +2622,17 @@ class StorageClient(VsphereClient):
         ctx.logger.debug("Storage resized to a new size %s." % storage_size)
 
 
-def with_server_client(f):
-    @wraps(f)
-    def wrapper(*args, **kw):
-        config = ctx.node.properties.get('connection_config')
-        server_client = ServerClient().get(config=config)
-        kw['server_client'] = server_client
-        return f(*args, **kw)
-    return wrapper
+def _with_client(client_name, client):
+    def decorator(f):
+        @wraps(f)
+        def wrapper(*args, **kwargs):
+            config = ctx.node.properties.get('connection_config')
+            kwargs[client_name] = client().get(config=config)
+            return f(*args, **kwargs)
+        return wrapper
+    return decorator
 
 
-def with_network_client(f):
-    @wraps(f)
-    def wrapper(*args, **kw):
-        config = ctx.node.properties.get('connection_config')
-        network_client = NetworkClient().get(config=config)
-        kw['network_client'] = network_client
-        return f(*args, **kw)
-    return wrapper
-
-
-def with_storage_client(f):
-    @wraps(f)
-    def wrapper(*args, **kw):
-        config = ctx.node.properties.get('connection_config')
-        storage_client = StorageClient().get(config=config)
-        kw['storage_client'] = storage_client
-        return f(*args, **kw)
-    return wrapper
+with_server_client = _with_client('server_client', ServerClient)
+with_network_client = _with_client('network_client', NetworkClient)
+with_storage_client = _with_client('storage_client', StorageClient)
