@@ -15,7 +15,6 @@
 
 # Stdlib imports
 import string
-from warnings import warn
 
 # Third party imports
 
@@ -26,7 +25,6 @@ from cloudify.decorators import operation
 
 # This package imports
 from vsphere_plugin_common import (
-    ConnectionConfig,
     get_ip_from_vsphere_nic_ips,
     remove_runtime_properties,
     with_server_client,
@@ -160,8 +158,7 @@ def create_new_server(server_client):
                     net,
                 )
 
-    connection_config = ConnectionConfig().get()
-    connection_config.update(ctx.node.properties.get('connection_config'))
+    connection_config = server_client.cfg
     datacenter_name = connection_config['datacenter_name']
     resource_pool_name = connection_config['resource_pool_name']
     auto_placement = connection_config['auto_placement']
@@ -426,12 +423,12 @@ def resize_server(server_client, cpus=None, memory=None, **kwargs):
 @operation
 @with_server_client
 def resize(server_client, **kwargs):
-    warn(
+    ctx.logger.warn(
         "This operation may be removed at any point from "
         "cloudify-vsphere-plugin==3. "
         "Please use resize_server (cloudify.interfaces.modify.resize) "
         "instead.",
-        DeprecationWarning)
+    )
     server = get_server_by_context(server_client)
     if server is None:
         raise cfy_exc.NonRecoverableError(
