@@ -1,4 +1,5 @@
 tbd:
+  - Move default connection config to /etc/cloudify/vsphere_plugin/connection_config.yaml
   - Add Server power operations (on, off, reboot, reset)
   - Allow host memory overcommit (best-effort placement of VMs)
 2.2.0:
